--- a/mobileproject/app/src/main/res/layout/fragment_image.xml
+++ b/mobileproject/app/src/main/res/layout/fragment_image.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context=".image"
     android:layout_marginHorizontal="10dp"
     >
 
@@ -21,6 +20,7 @@
             android:scaleType="fitXY"
             android:padding="0dp"
             android:contentDescription="ImageButton"
+            android:id="@+id/btnimages"
 
             >
         </ImageButton>
