--- a/mobileproject/app/src/main/res/layout/fragment_live.xml
+++ b/mobileproject/app/src/main/res/layout/fragment_live.xml
@@ -13,6 +13,7 @@ android:layout_marginVertical="20dp">
     android:layout_height="match_parent"
     app:cardCornerRadius="20dp">
     <ImageButton
+        android:id="@+id/btnLive"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:src="@mipmap/lives"
