--- a/mobileproject/app/src/main/res/layout/fragment_toolbar.xml
+++ b/mobileproject/app/src/main/res/layout/fragment_toolbar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#D6555E88"
@@ -8,11 +8,11 @@
     >
     <View
         android:id="@+id/icon_1"
-        android:layout_width="120dp"
-        android:layout_height="60dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
         android:layout_alignParentTop="true"
         android:background="@mipmap/icon1"
-        android:translationX="-40dp"
+        android:translationX="-20dp"
         />
 
     <View
@@ -21,8 +21,18 @@
         android:layout_height="30dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="10dp"
         android:background="@mipmap/icon2"
         />
 
-</androidx.appcompat.widget.Toolbar>
+    <Button
+        android:id="@+id/btnmenu"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:background="#00000000"
+        android:layout_marginLeft="10dp"
+        android:drawableRight="@drawable/baseline_menu_24"
+        android:contentDescription="button"/>
+
+</LinearLayout>
