--- a/mobileproject/app/src/main/res/layout/fragment_video.xml
+++ b/mobileproject/app/src/main/res/layout/fragment_video.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="20dp">
         <ImageButton
+            android:id="@+id/btnvideo"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:background="@mipmap/video"
