--- a/mobileproject/app/src/main/res/layout/fragment_firstrow_newpage.xml
+++ b/mobileproject/app/src/main/res/layout/fragment_firstrow_newpage.xml
@@ -4,91 +4,87 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".firstrowNewpage"
-    android:orientation="horizontal"
+    tools:context=".Newpage"
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="20dp">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recycleview"
 
-<androidx.cardview.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardCornerRadius="20dp">
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="250dp"
-    android:background="#000000"
-    >
+        app:cardCornerRadius="20dp"
+        tools:ignore="MissingClass">
 
-    <ImageButton
-        android:id="@+id/btnewpage1"
-        android:layout_width="320dp"
-        android:layout_height="180dp"
-        android:padding="0dp"
-        android:scaleType="fitXY"
-        android:src="@mipmap/newpage"
-        android:layout_centerHorizontal="true"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:background="#000000">
 
-    <TextView
-        android:id="@+id/nasa_astron"
-        android:layout_width="282dp"
-        android:layout_height="100dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="10dp"
-        android:gravity="top"
-        android:text="NASA Astronaut, Crewmates Reach Space Station for Science Expedition"
-        android:textColor="@color/white"
-        android:fontFamily="@font/inter_extrabold"
-        android:textSize="20sp" />
+            <ImageButton
+                android:id="@+id/news_image"
+                android:layout_width="320dp"
+                android:layout_height="180dp"
+                android:layout_centerHorizontal="true"
+                android:scaleType="fitXY"
+                android:background="@android:color/transparent"
+                android:onClick="openPost"/>
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="15dp"
-        app:cardCornerRadius="10dp">
-    <View
-        android:id="@+id/avtnewpage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@mipmap/avtnewpage" />
-    </androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/newsTitle"
+                android:layout_width="282dp"
+                android:layout_height="100dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="50dp"
+                android:layout_marginLeft="10dp"
+                android:gravity="top"
+                android:text=""
+                android:textColor="@color/white"
+                android:fontFamily="@font/inter_extrabold"
+                android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/dr_katherin"
-        android:layout_width="188dp"
-        android:layout_height="25dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="95dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="185dp"
-        android:text="Dr. Katherin Calvin"
-        android:textColor="@color/white"
-        android:textSize="17sp"
-        android:fontFamily="@font/inter_extrabold"
-        android:gravity="top"
-        />
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="15dp"
+                app:cardCornerRadius="10dp">
 
-    <TextView
-        android:id="@+id/sep_27_2023"
-        android:layout_width="152dp"
-        android:layout_height="26dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="95dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="215dp"
-        android:text="Sep 27 2023"
-        android:textSize="13sp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/inter_extrabold"
-        android:gravity="top"
-        />
+                <ImageView
+                    android:id="@+id/avtnewpage"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@android:color/transparent" />
+            </androidx.cardview.widget.CardView>
 
-</RelativeLayout>
+            <TextView
+                android:id="@+id/authorNews"
+                android:layout_width="188dp"
+                android:layout_height="25dp"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="95dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="185dp"
+                android:text=""
+                android:textColor="@color/white"
+                android:textSize="17sp"
+                android:fontFamily="@font/inter_extrabold"
+                android:gravity="top" />
 
-</androidx.cardview.widget.CardView>
-
-
+            <TextView
+                android:id="@+id/dateNews"
+                android:layout_width="152dp"
+                android:layout_height="26dp"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="95dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="215dp"
+                android:text=""
+                android:textSize="13sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/inter_extrabold"
+                android:gravity="top" />
+        </RelativeLayout>
+    </androidx.recyclerview.widget.RecyclerView>
 </LinearLayout>
