--- a/mobileproject/app/src/main/res/layout/activity_newpage.xml
+++ b/mobileproject/app/src/main/res/layout/activity_newpage.xml
@@ -1,32 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    tools:context=".Newpage"
-    android:orientation="vertical"
-    android:id="@+id/Newpage"
-    android:background="#29274C"
-    >
+    android:layout_width="match_parent"
+    android:background="@color/black">
 
-    <include layout="@layout/fragment_toolbar_child_page"/>
-    <HorizontalScrollView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:id="@+id/recyclerviewoflatestnews"
+        android:layout_margin="2dp"
+        android:fitsSystemWindows="true"
+        android:padding="2dp">
 
-        <include layout="@layout/fragment_firstrow_newpage" />
+    </androidx.recyclerview.widget.RecyclerView>
 
-        <include layout="@layout/fragment_firstrow_newpage"/>
-    </LinearLayout>
-    </HorizontalScrollView>
-    <include layout="@layout/fragment_second_row_newpage"/>
-
-
-
-
-  </LinearLayout>
+</RelativeLayout>
