fully update News Fragment with the use of API provided by https://newsapi.org

--- a/mobileproject/app/src/main/res/layout/videopage.xml
+++ b/mobileproject/app/src/main/res/layout/videopage.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentLeft="true"
         android:layout_margin="15dp"
         android:layout_alignParentTop="true"
-        android:text="Newsest Upload"
+        android:text="@string/newest_upload"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:fontFamily="@font/inter_extrabold"
