--- a/mobileproject/app/src/main/res/layout/activity_images.xml
+++ b/mobileproject/app/src/main/res/layout/activity_images.xml
@@ -5,70 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".newsMainPage">
+    tools:context=".imagesActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_marginTop="0dp"
-        android:background="@color/white"
-        android:id="@+id/toolbarImages">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/NASA"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:textColor="#03A9F4">
-            </TextView>
-        </RelativeLayout>
-    </androidx.appcompat.widget.Toolbar>
-
-    <com.google.android.material.tabs.TabLayout
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:id="@+id/include"
-        android:layout_below="@+id/toolbarImages"
-        app:tabTextColor="#618C8F"
-        app:tabSelectedTextColor="#03A9F4"
-        app:tabIndicatorColor="#03A9F4"
-        app:tabIndicatorHeight="3.5dp"
-        android:layout_marginTop="0dp"
-        android:backgroundTint="@color/white">
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/astronomy_picture_of_the_day"
-            android:id="@+id/apod"
-            >
-        </com.google.android.material.tabs.TabItem>
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="twitter"
-            android:id="@+id/twitter">
-        </com.google.android.material.tabs.TabItem>
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="facebook"
-            android:id="@+id/facebook">
-        </com.google.android.material.tabs.TabItem>
-
-    </com.google.android.material.tabs.TabLayout>
-
-    <androidx.viewpager.widget.ViewPager
+    <WebView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/include"
-        android:layout_marginTop="0dp"
-        android:id="@+id/fragmentcontainer">
+        android:id="@+id/imagewebview">
 
-    </androidx.viewpager.widget.ViewPager>
+    </WebView>
+
 </RelativeLayout>
