--- a/mobileproject/app/src/main/res/layout/homepage_toolbar_default.xml
+++ b/mobileproject/app/src/main/res/layout/homepage_toolbar_default.xml
@@ -6,33 +6,33 @@
     android:layout_alignParentTop="true"
 
     >
+
     <View
         android:id="@+id/icon_1"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
+        android:layout_width="121dp"
+        android:layout_height="61dp"
         android:layout_alignParentTop="true"
         android:background="@mipmap/icon1"
-        android:translationX="-20dp"
-        />
+        android:translationX="-20dp" />
 
     <View
         android:id="@+id/icon_2"
-        android:layout_width="150dp"
-        android:layout_height="30dp"
+        android:layout_width="174dp"
+        android:layout_height="37dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="15dp"
         android:layout_marginLeft="10dp"
-        android:background="@mipmap/icon2"
-        />
+        android:layout_marginTop="15dp"
+        android:background="@mipmap/icon2" />
 
     <Button
         android:id="@+id/btnmenu"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:background="#00000000"
+        android:layout_width="93dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
-        android:drawableRight="@drawable/baseline_menu_24"
-        android:contentDescription="button"/>
+        android:background="#00000000"
+        android:contentDescription="button"
+        android:drawableRight="@drawable/baseline_menu_24" />
 
 </LinearLayout>
