trying to create a new query to search for an image. waiting for framelayout to test.

--- a/mobileproject/app/src/main/res/layout/activity_homepage.xml
+++ b/mobileproject/app/src/main/res/layout/activity_homepage.xml
@@ -25,7 +25,8 @@
 
         <include
             android:id="@+id/image"
-            layout="@layout/hompage_to_image" />
+            layout="@layout/hompage_to_image"
+            android:layout_width="206dp" />
 
         <include
             android:id="@+id/video"
