--- a/mobileproject/app/src/main/res/layout/hompage_to_image.xml
+++ b/mobileproject/app/src/main/res/layout/hompage_to_image.xml
@@ -30,9 +30,9 @@
             android:layout_height="79dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
-            android:fontFamily="@font/inter_extrabold"
+            android:textStyle="bold"
             android:gravity="bottom"
             android:text="Images"
             android:textColor="#FFFFFF"
