--- a/mobileproject/app/src/main/res/layout/activity_images_apod.xml
+++ b/mobileproject/app/src/main/res/layout/activity_images_apod.xml
@@ -8,9 +8,6 @@
     android:background="@android:color/background_light"
     tools:context=".imagesAPODActivity">
 
-    <include layout="@layout/homepage_toolbar_default">
-    </include>
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -42,7 +39,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">
 
@@ -69,6 +66,5 @@
             android:textColor="@android:color/black"
             android:textSize="18sp" />
     </LinearLayout>
-
 
 </LinearLayout>
