--- a/mobileproject/app/src/main/res/layout/homepage_to_video.xml
+++ b/mobileproject/app/src/main/res/layout/homepage_to_video.xml
@@ -18,14 +18,15 @@
             android:background="@mipmap/video"
             android:contentDescription="video"
             android:scaleType="fitXY"
-            android:padding="0dp"/>
+            android:padding="0dp"
+            android:rotationY="180"/>
 
         <TextView
             android:layout_width="120dp"
             android:layout_height="79dp"
-            android:layout_marginLeft="230dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
-            android:fontFamily="@font/inter_extrabold"
+            android:textStyle="bold"
             android:gravity="bottom"
             android:text="Videos"
             android:textColor="#FFFFFF"
