--- a/mobileproject/app/src/main/res/layout/fragment_images_apod.xml
+++ b/mobileproject/app/src/main/res/layout/fragment_images_apod.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@android:color/background_light"
-    tools:context=".imagesAPODActivity">
+    tools:context=".imagesAPODFragment">
 
     <TextView
         android:layout_width="match_parent"
