--- a/mobileproject/app/src/main/res/layout/fragment_image_recyclerview.xml
+++ b/mobileproject/app/src/main/res/layout/fragment_image_recyclerview.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".imagesSearchActivity">
+    tools:context=".imagesSearchFragment">
     <androidx.appcompat.widget.SearchView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
