--- a/mobileproject/app/src/main/res/layout/fragment_images_apod.xml
+++ b/mobileproject/app/src/main/res/layout/fragment_images_apod.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@android:color/background_light"
     tools:context=".imagesAPODFragment">
@@ -31,9 +31,8 @@
         <ImageView
             android:id="@+id/apodImageView"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="300dp"
             android:scaleType="centerCrop" />
-
 
     </androidx.cardview.widget.CardView>
 
@@ -59,12 +58,16 @@
             android:layout_marginBottom="8dp"
             android:textColor="#323030"
             android:textSize="16sp" />
-        <TextView
-            android:id="@+id/apodExplanationTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/apodExplanationTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
+        </ScrollView>
     </LinearLayout>
 
 </LinearLayout>
